manifests/cilium-namespace-isolation.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: isolate-namespace
  namespace: default
spec:
  endpointSelector: {}
  ingress:
    # 1. Allow traffic from pods within the same namespace
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": default
    # 2. Allow incoming traffic from Traefik Ingress Controller
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
  egress:
    # 1. Allow internal namespace traffic
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": default
    # 2. Allow DNS resolution to CoreDNS
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # 3. Allow internet access for outbound external APIs
    - toEntities:
        - world
